# ray-tracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cannon.cpp  Coil.cpp  Humanoid.cpp  Makefile  RayTracer.cpp  Teapot.cpp  cmake_install.cmake  main  readme.md  readme.txt
lib/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  Ray.cpp  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h  SphereTex.cpp  SphereTex.h  Torus.cpp  Torus.h  solve-quartic.cpp  solve-quartic.h
